# strompris

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  DEVELOPMENT.md  LICENSE  PLATINUM.md  README.en.md  README.md  beregninger.md  hacs.json  pyproject.toml  vulture_whitelist.py
.dogcats/: config.toml  issues.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: hacs_submission.md
.github/workflows/: ci.yml  hacs-check.yml  hassfest.yml  release.yml
.opencode/: instructions.md
custom_components/nettleie/: config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/nettleie/translations/: en.json  nb.json
custom_components/stromkalkulator/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  strings.json  tso.py
custom_components/stromkalkulator/translations/: en.json  nb.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  HACS_PUBLISERING.md  ROADMAP.md  SENSORS.md  TESTING.md  UTILITY_METER_PLAN.md  beregninger.md
docs/fakta/: Lov_om_Norgespris_og_strømstønad_til_husholdninger.txt
docs/plans/: 2026-02-14-tso-migration-plan.md
tests/: __init__.py  conftest.py  test_avgifter.py  test_energiledd.py  test_forrige_maaned.py  test_kapasitetstrinn.py  test_month_transition_integration.py  test_stromstotte.py  test_tso_migration.py
