[project]
name = "stromkalkulator"
version = "0.12.0"
description = "Home Assistant integration for Norwegian electricity cost calculation"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.8.0",
    "vulture>=2.13",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "SIM108", # Use ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.stromkalkulator"]

[tool.vulture]
min_confidence = 80
paths = ["custom_components/stromkalkulator"]
exclude = ["*test*"]
